--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -255,7 +255,7 @@
                     "description": "Switch to rolling release",
                     "command": [
                         "get_user_continue \"This will switch to rolling releases\n\nwould you like to continue?\" process_input",
-                        "sed -i \"s\/http:\\/\\/[^ ]*\/http:\\/\\/beta.armbian.com/\" /etc/apt/sources.list.d/armbian.list"
+                        "set_rolling"
                     ],
                     "status": "Active",
                     "doc_link": "",
@@ -268,7 +268,7 @@
                     "description": "Switch to stable release",
                     "command": [
                         "get_user_continue \"This will switch to stable releases\n\nwould you like to continue?\" process_input",
-                        "sed -i \"s\/http:\\/\\/[^ ]*\/http:\\/\\/apt.armbian.com/\" /etc/apt/sources.list.d/armbian.list"
+                        "set_stable"
                     ],
                     "status": "Active",
                     "doc_link": "",
