--- a/.github/ISSUE_TEMPLATE/2-feature.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature.yml
@@ -2,7 +2,7 @@ name: Feature Request for the Armbian Config
 description: Suggest a feature that you want to see implemented.
 title: "[Feature Request]: "
 labels: ["Feature Request"]
-assignees: ""
+assignees: [""]
 body:
   - type: markdown
     attributes:
