Change the name of the package to armbian-configng

--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -16,7 +16,7 @@ jobs:
     with:
       matrix: "all:jammy"
       maintainer: "Igor Pecovnik <igor@armbian.com>"
-      package: "configng"
+      package: "armbian-configng"
       licence: "GPL 2.0"
       homepage: "https://www.armbian.com"
       section: "default"
